--- a/sass/blocks/_air-quality.scss
+++ b/sass/blocks/_air-quality.scss
@@ -1,4 +1,7 @@
 .air-quality {
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 300;
     background-color: $white-color;
     color: $black-color;
     border-radius: 10px;
@@ -7,15 +10,20 @@
         padding: 20px;
     }
     &__data {
+        margin-top: 20px;
         display: flex;
         align-items: flex-start;
+        justify-content: space-between;
+    }
+    &__progress {
+        overflow: hidden;
+        margin-right: 10px;
     }
     &__phrase-title {
         font-weight: 400;
     }
     &__phrase-descr {
         color: $grey2-color;
-        font-weight: 300;
         font-size: 14px;
     }
 }
