--- a/weekly/sass/dark-theme/_weekly-weather-dark.scss
+++ b/weekly/sass/dark-theme/_weekly-weather-dark.scss
@@ -1,3 +1,37 @@
 .dark {
-    
+    .weekly-weather {
+        color: $white-color;
+        background-color: $main-dark-color;
+        box-shadow: 0 0 10px 0 rgba($main-dark-color, 0.2);
+        &__item {
+            border-bottom: 1px solid $darkgrey-color;
+        }
+        &__temp-day {
+            color: $main-color;
+        }
+        &__secondary {
+            border: 1px solid $darkgrey-color;
+        }
+        &__allTemp-item {
+            border-image: linear-gradient(180deg, $main-dark-color, $grey-color, $main-dark-color) 1;
+        }
+        &__allTemp-value {
+            color: $main-color;
+        }
+        &__details {
+            border-bottom: 1px solid $darkgrey-color;
+            &:last-of-type {
+                border-bottom: none;
+            }
+        }
+        &__button {
+            color: $white-color;
+            background-color: $main-color;
+            border: 1px solid $main-color;
+            &:hover {
+                color: $white-color;
+                box-shadow: 0 0 5px 0 $main-color;
+            }
+        }
+    }
 }
