mobile main page

--- a/sass/media/_mobile.scss
+++ b/sass/media/_mobile.scss
@@ -120,7 +120,7 @@
                     background-color: $darkgrey-color;
                 }
                 &.active {
-                    background-color: $main-color;
+                    background-color: $darkgrey-color;
                     color: $white-color;
                 }
             }
