--- a/sass/media/_secondary-media.scss
+++ b/sass/media/_secondary-media.scss
@@ -1,5 +1,6 @@
 @media (max-width: 575px) {
     .secondary {
+        margin-top: 12px;
         grid-column-start: 1;
         grid-column-end: 2;
     }
