--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,7 @@
 @import 'dark-theme/nav-dark';
 @import 'dark-theme/footer-dark';
 @import 'dark-theme/air-quality-dark';
+@import 'dark-theme/mobile-dark';
 
 
 @import 'media/header-media';
