--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -41,7 +41,8 @@
                 color: $white-color;
             }
             &:focus {
-                outline: 5px auto #fff;
+                outline: none;
+                border: 2px solid $white-color;
             }
         }
         &-icon {
