--- a/air-quality/sass/style.scss
+++ b/air-quality/sass/style.scss
@@ -30,3 +30,13 @@
 @import 'dark-theme/header-dark';
 @import 'dark-theme/air-quality-main-dark';
 @import 'dark-theme/air-quality-info-dark';
+@import 'dark-theme/mobile-dark';
+
+@import 'media/card-header-media';
+@import 'media/footer-media';
+@import 'media/header-media';
+@import 'media/mobile';
+@import 'media/nav-media';
+@import 'media/screen-media';
+@import 'media/air-quality-main-media';
+@import 'media/air-quality-info-media';
