--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -1,6 +1,7 @@
 .button {
     &_more {
         display: inline-block;
+        text-align: center;
         margin-top: 20px;
         color: $white-color;
         background-color: $blue-color;
