--- a/hourly/sass/blocks/_hourly-weather.scss
+++ b/hourly/sass/blocks/_hourly-weather.scss
@@ -34,6 +34,7 @@
     }
     &__item-temp {
         display: flex;
+        font-weight: 400;
     }
     &__item-temp-day {
         color: $blue-color;
@@ -48,7 +49,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        img {
+        img, svg {
             margin-right: 10px;
         }
     }
