--- a/hourly/sass/blocks/_pageup.scss
+++ b/hourly/sass/blocks/_pageup.scss
@@ -6,6 +6,7 @@
     height: 40px;
     width: 40px;
     opacity: 1;
+    z-index: 1000;
     transition: opacity 1s;
     &.fade {
         opacity: 0;
