--- a/hourly/sass/dark-theme/_hourly-weather-dark.scss
+++ b/hourly/sass/dark-theme/_hourly-weather-dark.scss
@@ -10,7 +10,7 @@
             border-bottom: 1px solid $darkgrey-color;
         }
         &__item-temp {
-            color: $main-color;
+            color: $white-color;
         }
         &__item-secondary {
             border: 1px solid $darkgrey-color;
@@ -22,6 +22,11 @@
             &:hover {
                 color: $white-color;
                 box-shadow: 0 0 5px 0 $main-color;
+            }
+        }
+        &__item-wind-arrow-img {
+            path {
+                stroke: $white-color;
             }
         }
     }
