--- a/sass/blocks/_current-conditions.scss
+++ b/sass/blocks/_current-conditions.scss
@@ -23,7 +23,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        img {
+        img, svg {
             width: 20px;
             margin-right: 10px;
         }
