--- a/weekly/sass/style.scss
+++ b/weekly/sass/style.scss
@@ -28,3 +28,12 @@
 @import 'dark-theme/footer-dark';
 @import 'dark-theme/header-dark';
 @import 'dark-theme/weekly-weather-dark';
+@import 'dark-theme/mobile-dark';
+
+@import 'media/card-header-media';
+@import 'media/footer-media';
+@import 'media/header-media';
+@import 'media/mobile';
+@import 'media/nav-media';
+@import 'media/screen-media';
+@import 'media/weekly-weather-media';
