--- a/air-quality/sass/dark-theme/_air-quality-info-dark.scss
+++ b/air-quality/sass/dark-theme/_air-quality-info-dark.scss
@@ -6,7 +6,7 @@
             box-shadow: 0 0 10px 0 rgba($main-dark-color, 0.2);
         }
         &__item {
-            border-bottom: 1px solid $grey2-color;
+            border-bottom: 1px solid $darkgrey-color;
         }
         &__item-logo {
             border: 5px solid $main-color;
