--- a/sass/dark-theme/_current-conditions-dark.scss
+++ b/sass/dark-theme/_current-conditions-dark.scss
@@ -11,5 +11,10 @@
                 }
             }
         }
+        &__graph-secondary {
+            circle {
+                fill: $main-dark-color;
+            }
+        }
     }
 }
