--- a/air-quality/sass/media/_air-quality-main-media.scss
+++ b/air-quality/sass/media/_air-quality-main-media.scss
@@ -1,12 +1,4 @@
 @media (max-width:  767px) {
-    .dark {
-        .air-quality {
-            &__main-rightCol {
-                border-image: none;
-                border-color: $darkgrey-color;
-            }
-        }
-    }
     .air-quality {
         &__main {
             padding: 15px 15px;
@@ -25,8 +17,7 @@
             width: 100%;
             border-left: none;
             border-top: 1px solid;
-            border-image: none;
-            border-color: $grey-color;
+            border-image: linear-gradient(90deg, $white-color, $grey-color, $white-color) 1;
             display: block;
         }
         &__levels {
