--- a/air-quality/sass/media/_air-quality-info-media.scss
+++ b/air-quality/sass/media/_air-quality-info-media.scss
@@ -1,3 +1,12 @@
+@media (max-width:  991px) {
+    .air-quality {
+        &__item-logo {
+            min-width: 100px;
+            min-height: 100px;
+        }
+    }
+}
+
 @media (max-width:  767px) {
     .air-quality {
         &__info {
@@ -9,6 +18,8 @@
         &__item-logo {
             max-width: 60px;
             max-height: 60px;
+            min-width: 60px;
+            min-height: 60px;
             border: 3px solid $blue-color;
             font-size: 20px;
             line-height: 20px;
